BaseFolderWriter implementations: Prefer passed in Container vs. ctx.getContainer()... and temporarily assert that these are the same